fix: fix overflowing on Legal page

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -380,7 +380,7 @@
         }
 
         .item__text {
-          padding-left: $base * 4;     // 20 px
+          padding-left: $base * 3;     // 15 px
         }
       }
     }
